Test ZoneResolver